[package]
name = "raptor-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "raptor"

[[bench]]
name = "raptor"
harness = false

[[bench]]
name = "mcraptor"
harness = false

[dependencies]
chrono = { version = "0.4.37", default-features = false }
bnum = { version = "0.11.0", default-features = false }
gtfs-structures =  { version = "0.41", default-features = false }
rgb = { version = "0.8.37", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
thiserror = "1.0.63"
#bump-scope = "^0.5.7"
#allocator-api2 = "^0.2.18"

[dev-dependencies]
fastrand = "2.1.0"
criterion = { version = "0.5", features = ["html_reports"] }
dev_utils = { path = "./dev_utils" }
