[package]
name = "raptor-rs"
version = "0.8.0"
edition = "2021"

[lib]
name = "raptor"

[[bench]]
name = "raptor"
harness = false

[[bench]]
name = "mcraptor"
harness = false

[dependencies]
chrono = { version = "0.4.37", default-features = false }
bnum = { version = "0.12.0", default-features = false }
gtfs-structures =  { version = "0.42.0", default-features = false }
rgb = { version = "0.8.37", default-features = false }
arrayvec = { version = "0.7.6", default-features = false }
thiserror = "2.0.0"
log = "0.4.22"
#bump-scope = "^0.5.7"
#allocator-api2 = "^0.2.18"

[dev-dependencies]
fastrand = "2.1.0"
criterion = { version = "0.5", features = ["html_reports"] }
dev_utils = { path = "./dev_utils" }
